# src/auth/auth.controller.ts
@@ -7,19 +7,27 @@ import { ApiTags, ApiOperation, ApiResponse } from '@nestjs/swagger';
 @ApiTags('Auth')
 @Controller('auth')
 export class AuthController {
-  constructor(private readonly auth: AuthService) {}
+  constructor(private readonly authService: AuthService) {}
 
   @Post('register')
   @ApiOperation({ summary: 'Register new account' })
   @ApiResponse({ status: 201, description: 'Returns JWT token' })
   register(@Body() dto: CreateUserDto) {
-    return this.auth.register(dto);
+    return this.authService.register(dto);
+
   }
+
+  @Post('verify-email')
+  async verifyEmail(@Body() body: { email: string; code: string }) {
+    return this.authService.verifyEmail(body.email, body.code);
+  }
+
 
   @Post('login')
   @ApiOperation({ summary: 'Login' })
   @ApiResponse({ status: 200, description: 'Returns JWT token' })
   login(@Body() dto: LoginDto) {
-    return this.auth.login(dto);
+    return this.authService.login(dto);
+
   }
 }
